Updated LinkedIn and Github Prof

--- a/templates/index.html
+++ b/templates/index.html
@@ -227,8 +227,8 @@
                         This system uses advanced natural language processing to recommend relevant IPC sections based on your queries.
                     </p>
                     <p class="small">
-                        Contact: <a href="mailto:support@ipcrecommender.com" class="text-light">support@ipcrecommender.com</a> |
-                        LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank" class="text-light">Your Profile</a>
+                        Github: <a href="https://github.com/Ankit-iq" class="text-light">Ankit-iq</a> |
+                        LinkedIn: <a href="https://www.linkedin.com/in/ankit-kumar-bhuyan-537740279/" target="_blank" class="text-light">My Profile</a>
                     </p>
                 </div>
             </div>
